--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 
         .todos-page {
             display: none;
+            height: 100vh;
+        overflow: hidden;
+        flex-direction: column;
         }
 
         .add-btn {
@@ -210,17 +213,19 @@
         }
 
         .todos-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 30px;
+            position: sticky;
+        top: 0;
+        background: var(--dark-blue);
+        z-index: 100;
+        padding: 20px;
+        box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
         }
 
         .todos-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-            padding: 20px;
+            flex: 1;
+        overflow-y: auto;
+        padding: 0 20px 20px;
+        margin-top: 10px;
         }
 
         .todo-card {
