--- a/index.html
+++ b/index.html
@@ -228,6 +228,16 @@
         margin-top: 10px;
         }
 
+        todos-grid::-webkit-scrollbar-track {
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 4px;
+    }
+
+    .todos-grid::-webkit-scrollbar-thumb {
+        background: var(--purple);
+        border-radius: 4px;
+    }
+
         .todo-card {
             background: var(--blue);
             padding: 20px;
