--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         .todos-page {
             display: none;
             height: 100vh;
-        overflow: hidden;
+        overflow: auto;
         flex-direction: column;
         }
 
