--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             color: white;
             min-height: 100vh;
             touch-action: pan-y;
-            overflow: hidden;
+            overflow: auto;
         }
 
         .page {
