--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <button class="add-btn" id="addCategoryBtn">+</button>
         <div class="joystick-container">
             <div class="joystick-base"></div>
-            <div class="joystick-thumb" id="joystickThumb">☰</div>
+            <div class="joystick-thumb" id="joystickThumb">꩜</div>
             <div class="selection-line" id="selectionLine"></div>
             <div id="categoriesContainer"></div>
         </div>
